--- a/style.css
+++ b/style.css
@@ -26,9 +26,10 @@
 }
 
 .banner-section-bg-container {
-    background-image: url("https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/foodmunch-banner-bg.png");
-    height: 100vh;
+    background-image: url('https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/foodmunch-banner-bg.png');
     background-size: cover;
+    background-position: center;
+    height: 100vh;
 }
 
 .banner-heading {
