--- a/style.css
+++ b/style.css
@@ -26,11 +26,10 @@
 }
 
 .banner-section-bg-container {
-    background-image: url('https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/foodmunch-banner-bg.png');
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
+    width: 100%;
+    background-color: red; /* Just to test */
 }
+
 
 .banner-heading {
     color: white;
