--- a/style.css
+++ b/style.css
@@ -27,7 +27,11 @@
 
 .banner-section-bg-container {
     width: 100%;
-    background-color: red; /* Just to test */
+    height: 100vh;
+    background-image: url('https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/foodmunch-banner-bg.png');
+    background-size: cover;
+    background-position: center;
+
 }
 
 
