--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
 .banner-section-bg-container {
     width: 100%;
     height: 100vh;
-    background-image: url('https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/foodmunch-banner-bg.png');
+    background-image: url('https://media.istockphoto.com/id/517809884/photo/millet-porridge-with-mushrooms-in-a-wooden-bowl.jpg?s=612x612&w=0&k=20&c=dB6ZCrEvcsSnTi_iJS9Ofc7h485PpS1zOWNsU7LaoYU=');
     background-size: cover;
     background-position: center;
 
