--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
 
 
 .banner-heading {
-    color: white;
+    color: light brown;
     font-family: "Roboto";
     font-size: 45px;
     font-weight: 300;
