--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
 .banner-section-bg-container {
     width: 100%;
     height: 100vh;
-    background-image: url('banner.jpg');
+    background-image: url('banner.webp');
     background-size: cover;
     background-position: center;
 
